--- a/style.css
+++ b/style.css
@@ -3,3 +3,36 @@ body {
   height: 100%;
   margin: 0;
 }
+header {
+  text-align: center;
+}
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+nav a {
+  text-align: center;
+  padding: 10px;
+  background-color: grey
+}
+figcaption {
+  text-align: center;
+  font-size: 12px;
+}
+#featured-property p {
+  width: 800px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#details {
+  display: block;
+}
+#details div{
+  float: left;
+  text-align: center;
+  width: 25%; 
+  background-color: red 
+}
